Hooking up the sample database.

--- a/DiscordNet3Bot/appsettings.json
+++ b/DiscordNet3Bot/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Token": "[YOUR BOT TOKEN HERE]",
+  "Token": "[YOUR BOT'S TOKEN HERE.]'",
   "Prefix": "!",
-  "TestGuild": "[YOUR GUILD ID HERE]"
+  "TestGuild": "[YOUR GUILD ID HERE.]"
 }
