--- a/DiscordNet3Bot/DiscordNet3Bot.csproj
+++ b/DiscordNet3Bot/DiscordNet3Bot.csproj
@@ -23,7 +23,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="ExampleDB\SampleDB.db">
+    <None Update="Databases\ExampleDB\Equipment.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
