--- a/DiscordNet3Bot/appsettings.json
+++ b/DiscordNet3Bot/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "Token": "[YOUR BOT'S TOKEN HERE.]'",
+  "Token": "[YOUR BOT TOKEN HERE.]",
   "Prefix": "!",
-  "TestGuild": "[YOUR GUILD ID HERE.]"
+  "TestGuild": "[YOUR GUILD ID HERE]",
+  "EquipmentDBDataSource": ".\\Databases\\ExampleDB\\Equipment.db"
 }
