Implementing a proper DAL, but as a new branch.

--- a/DiscordNet3Bot/appsettings.json
+++ b/DiscordNet3Bot/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "Token": "[YOUR BOT TOKEN HERE.",
+  "Token": "MTAwMjk3ODUzODU2OTM1MTE3OQ.GeRBsq.v7ggfplS6Yh0JkEGS-wmnv1XDrIY_ncHsEqw8I",
   "Prefix": "!",
-  "TestGuild": "[YOUR GUILD ID HERE",
+  "TestGuild": "1003038311616622642",
   "EquipmentDBDataSource": ".\\Databases\\ExampleDB\\Equipment.db"
 }
