Removing private tokens.

--- a/DiscordNet3Bot/appsettings.json
+++ b/DiscordNet3Bot/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "Token": "MTAwMjk3ODUzODU2OTM1MTE3OQ.GeRBsq.v7ggfplS6Yh0JkEGS-wmnv1XDrIY_ncHsEqw8I",
+  "Token": "[YOUR BOT TOKEN HERE]",
   "Prefix": "!",
-  "TestGuild": "1003038311616622642",
+  "TestGuild": "[YOUR TEST GUILD ID HERE]",
   "EquipmentDBDataSource": ".\\Databases\\ExampleDB\\Equipment.db"
 }
